fix: trash icon in titled list should be right aligned, even if text is not long enough

--- a/src/components/base/list/TitledList.module.scss
+++ b/src/components/base/list/TitledList.module.scss
@@ -41,6 +41,7 @@ $selection-border-width: 3px;
 }
 
 .link {
+  flex: 1 1;
   display: flex;
   flex-direction: row;
   align-items: center;
